# Hytale-Name-Checker

./: Cargo.toml  README.md
src/: main.rs
