[package]
name = "untitled"
version = "0.1.0"
edition = "2024"

[dependencies]
bounded_join_set = "0.3.0"
ratelimit = "0.10.0"
reqwest = {version = "0.13.1", features = ["query"] }
reqwest-leaky-bucket = "0.5.0"
reqwest-middleware = "0.5.0"
reqwest-ratelimit = "0.5.0"
tokio = { version = "1.49.0", features = ["full"] }
